Use non admin user for UI tests

--- a/it.content/src/main/content/jcr_root/apps/aem-dictionary-translator/osgiconfig/config/org.apache.sling.jcr.repoinit.RepositoryInitializer~dictionary-translator-it-content.config
+++ b/it.content/src/main/content/jcr_root/apps/aem-dictionary-translator/osgiconfig/config/org.apache.sling.jcr.repoinit.RepositoryInitializer~dictionary-translator-it-content.config
@@ -1,11 +1,11 @@
 scripts=["
-    create group dictionary-user
-    add dictionary-user to group contributor
+    create group dictionary-users
+    add dictionary-users to group contributor
 
-    create user test-user-dictionary-user with password test-password-dictionary-user
-    add test-user-dictionary-user to group dictionary-user
+    create user test-dictionary-user with password test-dictionary-user-password
+    add test-dictionary-user to group dictionary-users
 
-    set ACL for dictionary-user
+    set ACL for dictionary-users
         allow jcr:read,jcr:nodeTypeManagement,jcr:write,crx:replicate on /content/dictionaries
         allow jcr:read on /libs/cq/i18n/translator
         allow jcr:read on /libs/cq/i18n/gui/translator
