--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,9 +46,12 @@ jobs:
         run: mvn install -B -U -PautoInstallPackage -pl it.content
       - name: Run ui.tests
         run: mvn test -B -pl ui.tests -DskipTests=false
-      - name: Publish Playwright Summary Results
-        run: npx github-actions-ctrf ui.tests/ctrf/ctrf-report.json
-      - name: Upload Playwright Report
+      - name: Publish Playwright test results
+        run: |
+          npx github-actions-ctrf --pull-request --annotate ui.tests/ctrf/ctrf-report.json
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload Playwright HTML report
         uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
