--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,8 @@ updates:
         versions: [ "[6.5.17,)" ]
       - dependency-name: "biz.aQute.bnd:bnd-maven-plugin"
         update-types: [ "version-update:semver-major" ]
+      - dependency-name: "org.apache.commons:commons-csv"
+        versions: [ "[1.10.0,)" ]
   - package-ecosystem: "npm"
     directory: "/ui.tests"
     schedule:
