--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
 
         <aem.version>6.5.17</aem.version>
         <aemanalyser.version>1.6.6</aemanalyser.version>
+
+        <sonar.organization>orbinson</sonar.organization>
+        <sonar.projectKey>${sonar.organization}_${project.artifactId}</sonar.projectKey>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco-aggregate/jacoco.xml
+        </sonar.coverage.jacoco.xmlReportPaths>
     </properties>
 
     <build>
@@ -487,6 +493,11 @@ Bundle-DocURL:
                         <npmVersion>10.9.0</npmVersion>
                         <installDirectory>${project.build.directory}</installDirectory>
                     </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.sonarsource.scanner.maven</groupId>
+                    <artifactId>sonar-maven-plugin</artifactId>
+                    <version>5.0.0.4389</version>
                 </plugin>
             </plugins>
         </pluginManagement>
