--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,6 +2,9 @@ version: 2
 updates:
   - package-ecosystem: "maven"
     directory: "/"
+    reviewers:
+      - bdhoine
+      - royteeuwen
     schedule:
       interval: "weekly"
     ignore:
@@ -11,9 +14,15 @@ updates:
         update-types: [ "version-update:semver-major" ]
   - package-ecosystem: "npm"
     directory: "/ui.tests"
+    reviewers:
+      - bdhoine
+      - royteeuwen
     schedule:
       interval: "weekly"
   - package-ecosystem: "github-actions"
     directory: "/"
+    reviewers:
+      - bdhoine
+      - royteeuwen
     schedule:
       interval: "weekly"
