--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: aem-maven-build
     permissions:
+      contents: write
+      packages: read
       pull-requests: write
     services:
       aem-author:
