--- a/core/pom.xml
+++ b/core/pom.xml
@@ -37,6 +37,10 @@ Import-Package: javax.annotation;version=0.0.0,*
                 </executions>
             </plugin>
             <plugin>
+                <groupId>biz.aQute.bnd</groupId>
+                <artifactId>bnd-baseline-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
             </plugin>
