Support read-only view of JSON-file based dictionaries
This closes #26

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -84,6 +84,10 @@ Import-Package: javax.annotation;version=0.0.0,*
         </dependency>
 
         <dependency>
+            <groupId>org.apache.jackrabbit</groupId>
+            <artifactId>jackrabbit-jcr-commons</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
         </dependency>
