Restructure API to improve caching
Drop resource traversal for look up of dictionaries
Use Locale type for languages in API
Expose potentially multiple base names per dictionary.
Sort columns on server-side
Emit keys and messages in pre elements to preserve whitespaces

This closes #182
This closes #163
This closes #183
This closes #179
This closes #187

--- a/ui.config/src/main/content/jcr_root/apps/aem-dictionary-translator/osgiconfig/config/author/org.apache.sling.jcr.repoinit.RepositoryInitializer~dictionary-translator.config
+++ b/ui.config/src/main/content/jcr_root/apps/aem-dictionary-translator/osgiconfig/config/author/org.apache.sling.jcr.repoinit.RepositoryInitializer~dictionary-translator.config
@@ -7,7 +7,7 @@ scripts=["
 
     create service user dictionary-service
 
-    set ACL on /content/dictionaries,/libs/wcm/core/resources/languages
+    set ACL on /
         allow jcr:read for dictionary-service
     end
 "]
