Support dictionaries with different entries below same parent
Add checkbox for empty translation in order to keep them empty
Default behaviour for empty translations is still removing the
underlying entry node.
Expose keys in a way that special characters are visible.
Escape newlines in keys as they are used in data attributes in HTML, get
rid of hidden form field "key" in Update dialog to prevent issues with
newlines.

This closes #207 #172 #208

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -148,14 +148,14 @@ Import-Package: javax.annotation;version=0.0.0,*
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
+            <groupId>io.wcm</groupId>
+            <artifactId>io.wcm.testing.logging.logback</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>io.wcm</groupId>
-            <artifactId>io.wcm.testing.logging.logback</artifactId>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.testing.hamcrest</artifactId>
+            <version>1.0.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
