--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>be.orbinson.aem</groupId>
     <artifactId>aem-dictionary-translator</artifactId>
     <packaging>pom</packaging>
-    <version>1.5.2-SNAPSHOT</version>
+    <version>1.6.0-SNAPSHOT</version>
 
     <name>AEM Dictionary Translator</name>
     <description>Tool to translate AEM i18n dictionaries for internationalization</description>
@@ -14,6 +14,7 @@
     <modules>
         <module>all</module>
         <module>core</module>
+        <module>core.cloud</module>
         <module>it.content</module>
         <module>ui.apps</module>
         <module>ui.apps.structure</module>
@@ -33,6 +34,11 @@
             <name>Roy Teeuwen</name>
             <email>roy@orbinson.be</email>
             <id>royteeuwen</id>
+        </developer>
+        <developer>
+            <name>Konrad Windszus</name>
+            <email>konrad.windszus@netcentric.biz</email>
+            <id>kwin</id>
         </developer>
     </developers>
 
@@ -103,7 +109,7 @@
                     <scmCommentPrefix>[maven-scm] :</scmCommentPrefix>
                     <preparationGoals>clean install</preparationGoals>
                     <goals>install</goals>
-                    <releaseProfiles>release</releaseProfiles>
+                    <releaseProfiles>release,classic</releaseProfiles>
                 </configuration>
             </plugin>
             <plugin>
