--- a/all/pom.xml
+++ b/all/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>be.orbinson.aem</groupId>
         <artifactId>aem-dictionary-translator</artifactId>
-        <version>1.5.2-SNAPSHOT</version>
+        <version>1.6.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -26,31 +26,39 @@
                     <packageType>container</packageType>
                     <!-- all sub packages have been validated already -->
                     <skipSubPackageValidation>true</skipSubPackageValidation>
+                    <embeddedTarget>apps/aem-dictionary-translator-packages/application/install</embeddedTarget>
+                    <!-- list of embeds relevant for both container packages (classic and cloud) -->
                     <embeddeds>
                         <embedded>
-                            <groupId>be.orbinson.aem</groupId>
                             <artifactId>aem-dictionary-translator.ui.apps</artifactId>
-                            <type>zip</type>
-                            <target>/apps/aem-dictionary-translator-packages/application/install</target>
                         </embedded>
                         <embedded>
-                            <groupId>be.orbinson.aem</groupId>
                             <artifactId>aem-dictionary-translator.core</artifactId>
-                            <target>/apps/aem-dictionary-translator-packages/application/install</target>
                         </embedded>
                         <embedded>
-                            <groupId>be.orbinson.aem</groupId>
                             <artifactId>aem-dictionary-translator.ui.config</artifactId>
-                            <type>zip</type>
-                            <target>/apps/aem-dictionary-translator-packages/application/install</target>
                         </embedded>
                         <embedded>
-                            <groupId>org.apache.commons</groupId>
                             <artifactId>commons-csv</artifactId>
-                            <target>/apps/aem-dictionary-translator-packages/application/install</target>
                         </embedded>
                     </embeddeds>
                 </configuration>
+                <executions>
+                    <!-- the cloud package additionally contains the bundle fragment aem-dictionary-translator.core.cloud -->
+                    <execution>
+                        <id>default-generate-metadata</id>
+                        <goals>
+                            <goal>generate-metadata</goal>
+                        </goals>
+                        <configuration>
+                            <embeddeds combine.children="append">
+                                <embedded>
+                                    <artifactId>aem-dictionary-translator.core.cloud</artifactId>
+                                </embedded>
+                            </embeddeds>
+                        </configuration>
+                     </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>io.wcm.maven.plugins</groupId>
@@ -106,6 +114,48 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>classic</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <!-- add package for AEM 6.5 with classifier "classic" -->
+                        <groupId>org.apache.jackrabbit</groupId>
+                        <artifactId>filevault-package-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>classic-generate-metadata</id>
+                                <goals>
+                                    <goal>generate-metadata</goal>
+                                </goals>
+                                <configuration>
+                                    <classifier>classic</classifier>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>classic-package</id>
+                                <goals>
+                                    <goal>package</goal>
+                                </goals>
+                                <configuration>
+                                    <classifier>classic</classifier>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>default-validate-package</id>
+                                <configuration>
+                                    <!-- validate both generated packages in one execution -->
+                                    <classifier>classic</classifier>
+                                </configuration>
+                            </execution>
+                          </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 
     <dependencies>
@@ -118,6 +168,11 @@
         <dependency>
             <groupId>be.orbinson.aem</groupId>
             <artifactId>aem-dictionary-translator.core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>be.orbinson.aem</groupId>
+            <artifactId>aem-dictionary-translator.core.cloud</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
