Use Oracle JDK for running UI tests
Officially only Oracle distributions are supported (https://experienceleague.adobe.com/en/docs/experience-manager-learn/cloud-service/local-development-environment-set-up/aem-runtime)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
-          distribution: zulu
+          distribution: oracle
           java-version: 21
           cache: maven
       - name: Get Playwright version from package-lock.json
