Enforce creation of ancestor node '/apps/cq/core/content/nav/tools' with correct type
It must be of a type which allows 'nt:unstructured' child nodes,
therefore create it as 'sling:Folder' which can be created below
'nt:folder'

This closes #232

--- a/all/pom.xml
+++ b/all/pom.xml
@@ -24,6 +24,8 @@
                 <configuration>
                     <group>be.orbinson.aem</group>
                     <packageType>container</packageType>
+                    <!-- all sub packages have been validated already -->
+                    <skipSubPackageValidation>true</skipSubPackageValidation>
                     <embeddeds>
                         <embedded>
                             <groupId>be.orbinson.aem</groupId>
