--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
       push: ${{ inputs.push }}
       java-version: 11
     secrets:
-      username: ${{ secrets.SONATYPE_USERNAME }}
-      password: ${{ secrets.SONATYPE_PASSWORD }}
+      username: ${{ secrets.SONATYPE_CENTRAL_PORTAL_TOKEN_USER }}
+      password: ${{ secrets.SONATYPE_CENTRAL_PORTAL_TOKEN_PASSWORD }}
       gpg-passphrase: ${{ secrets.GPG_PASSPHRASE }}
       gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
