Switch to njord branch to be able to test this specifically for aem-dictionary-translator

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ on:
 
 jobs:
   call-workflow:
-    uses: orbinson/workflows/.github/workflows/maven-release.yml@main
+    uses: orbinson/workflows/.github/workflows/maven-release.yml@njord
     with:
       central: ${{ inputs.central }}
       github: ${{ inputs.github }}
