Switch gpg plugin to the correct phase, so that the artifacts are signed before deploying

--- a/pom.xml
+++ b/pom.xml
@@ -428,7 +428,7 @@ Bundle-DocURL:
                     <version>3.2.7</version>
                     <executions>
                         <execution>
-                            <phase>deploy</phase>
+                            <phase>verify</phase>
                             <goals>
                                 <goal>sign</goal>
                             </goals>
